--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -61,7 +61,7 @@ jobs:
 
       - name: Build package and download license information
         run: |
-          ./gradlew build -x test --no-configuration-cache -Prevision=${{ env.RELEASE_VERSION }} -Pchangelist=${{ env.CHANGELIST }} -PexecutableSDCcc
+          ./gradlew build buildHealth -Pdependency.analysis.print.build.health=true -x test --no-configuration-cache -Prevision=${{ env.RELEASE_VERSION }} -Pchangelist=${{ env.CHANGELIST }} -PexecutableSDCcc
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
